[package]
name = "mock_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6.2", features = ["actix-server"] }
actix-web = "4.2.1"
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
http-serde = "1.1.2"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.91"
serde_qs = "0.11.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.17"
tokio = { version = "1.24.2", features = ["full"] }
