[package]
name = "mock_server"
version = "1.0.1"
edition = "2021"
authors = ["zouyalong"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6.2", features = ["actix-server"] }
actix-multipart = "0.5.0"
actix-web = "4.2.1"
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.25"
http-serde = "1.1.2"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.91"
serde_qs = "0.11.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.17"
syntect = "5.0.0"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
